[workspace]
resolver = "2"
members = [
    "linux-crng-ioctl",
    "rand_jitterentropy",
    "libjitterentropy-sys"
]

[workspace.package]
version = "0.1.4"
authors = ["Markus Theil <theil.markus@gmail.com>"]
edition = "2024"

[workspace.dependencies]
libjitterentropy-sys = { path = "libjitterentropy-sys", version = "0.1.4" }
rand_core = "0.9.3"

[workspace.lints.clippy]
all = { level = "deny", priority = 0 }
pedantic = { level = "deny", priority = 0 }
cargo = { level = "deny", priority = 0 }