[workspace]
resolver = "2"
members = [
    "linux-crng-ioctl",
    "rand_jitterentropy",
    "libjitterentropy-sys",
    "rngd"
]

[workspace.package]
version = "0.1.5"
authors = ["Markus Theil <theil.markus@gmail.com>"]
edition = "2024"

[workspace.dependencies]
anyhow = { version = "1.0.100" }
libjitterentropy-sys = { path = "libjitterentropy-sys" }
linux-crng-ioctl = { path = "linux-crng-ioctl" }
log = { version = "0.4.28" }
nix = { version = "0.30.1" }
rand = "0.9.2"
rand_core = "0.9.3"
rand_jitterentropy = { path = "rand_jitterentropy" }
sha3 = { version = "0.11.0-rc.3", features = ["zeroize"] }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }

[workspace.lints.clippy]
all = { level = "deny", priority = 0 }
pedantic = { level = "deny", priority = 0 }
cargo = { level = "deny", priority = 0 }
