[package]
name = "linux-crng-ioctl"
authors.workspace = true
edition.workspace = true
version.workspace = true
license = "MIT"
repository = "https://github.com/thillux/rand_jitterentropy"
description = "provides wrapper for Linux kernel kernel RNG ioctls"
keywords = ["rand", "random", "Linux", "rng"]
categories = ["cryptography"]

[dependencies]
anyhow = { version = "1.0.98" }
log = { version = "0.4.27" }
nix = { version = "0.30.1", features = ["ioctl"] }
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }

[dev-dependencies]
nix = { version = "0.30.1", features = ["ioctl", "user"] }

[lints]
workspace = true