[package]
name = "linux-crng-ioctl"
authors.workspace = true
edition.workspace = true
version.workspace = true
license = "MIT"
repository = "https://github.com/thillux/rand_jitterentropy"
description = "provides wrapper for Linux kernel kernel RNG ioctls"
keywords = ["rand", "random", "Linux", "rng"]
categories = ["cryptography"]

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
nix = { workspace = true, features = ["ioctl"] }
zeroize = { workspace = true }

[dev-dependencies]
nix = { workspace = true, features = ["ioctl", "user"] }

[lints]
workspace = true